simplifying the search component it will no longer provide a search button (enter key or live search only) it now sports a search icon for added visibility

--- a/src/Components/Common/DataGrid/DataGrid.less
+++ b/src/Components/Common/DataGrid/DataGrid.less
@@ -7,7 +7,7 @@
 
     // if we're rendering a table view, remove the rounded corners to match the
     // table styling
-    &.Table > input {
+    &.Table input {
       border-radius: 0;
     }
   }
